Hide the default greeting when JS is enabled to avoid flicker

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,14 @@ body {
 }
 
 #greeting h1 {
+  color: white;
   font-size: 6rem;
   margin: 3rem 0 1rem;
   font-weight: 800;
+}
+
+.no-js #greeting h1 {
+  color: inherit;
 }
 
 #greeting h2 {
